[gd_scene load_steps=9 format=2]

[ext_resource path="res://HitBoxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/SwordSwipe.png" type="Texture" id=2]
[ext_resource path="res://Player/Weapons/Sword.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/swordSwoosh.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/swordSwoosh2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/sword_neon.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.1683

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[node name="Sword" type="Node2D"]
script = ExtResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 144

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 23.262, 0 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 20.261, 0 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SwingReset" type="Timer" parent="."]
one_shot = true

[node name="WeaponSprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
offset = Vector2( 0, -10.73 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hitbox"]
